Moved to jdk 19 where foreign memory access is a preview feature